# MiroFish

./: .env.example  ALPHA_SOURCES_AND_DATA_EDGES.md  Dockerfile  Dockerfile.bridge  QUANT_SIGNAL_IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  market_data.py  report.py  signals.py  simulation.py
backend/app/models/: project.py  signal.py  task.py
backend/app/services/: external_ingestion.py  financial_ontology.py  graph_builder.py  market_data_service.py  news_feed_service.py  oasis_profile_generator.py  onchain_data_service.py  ontology_generator.py  order_book_simulator.py  regime_detector.py  report_agent.py  (+13 more)
backend/forge_bridge/: __init__.py  bridge_config.py  bridge_runner.py  consensus_analyser.py  db_writer.py  forge_strategy_adapter.py  independence_estimator.py  pyproject.toml  scheduler.py  signal_calibrator.py  signal_extractor.py  stance_classifier.py
backend/forge_bridge/schema/: init.sql
backend/forge_bridge/tests/: test_consensus_analyser.py  test_independence_estimator.py  test_quality_gates.py  test_signal_calibrator.py  test_stance_classifier.py
backend/forge_bridge/validation/: __init__.py  approvals_generator.py  cost_model.py  cpcv_runner.py  distributional_metrics.py  perturbation_tests.py  quality_gates.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: vite.config.js
frontend/src/: main.js
(+25 files in other folders)
