[project]
name = "forge-bridge"
version = "1.0.0"
description = "MiroFish → Forge Signal Bridge: Swarm intelligence to quantified trading signals"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]
